--- a/sampleapp/src/main/AndroidManifest.xml
+++ b/sampleapp/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity_RecyclerView"
+            android:name=".express.MainActivity_RecyclerView_Express"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,6 +18,8 @@
         </activity>
 <!--        <activity
             android:name=".MainActivity_ListView"
+             -or android:name=".MainActivity_RecyclerView"
+             -or android:name=".express.MainActivity_ListView_Express"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
