--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: android
 android:
   components:
-    - build-tools-24.0.1
-    - android-24
+    build-tools-24.0.1
+    android-24
 # Additional components
     - extra-com_android_support_appcompat-v7:24.2.0
     - extra-google-m2repository
