--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,15 @@ android:
     - extra-com_android_support_appcompat-v7:24.2.0
     - extra-google-m2repository
     - extra-android-m2repository
-    - addon-google_apis-google-24
     
+
+
     before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
 cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
+    
+    script:
+    ./gradlew build connectedCheck
