--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,22 @@
-language: android
+language: java
+jdk: oraclejdk7
 
+before_install:
+  - chmod +x $PWD/.travis_install_android.sh
+  - $PWD/.travis_install_android.sh
 
-before_cache:
-  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
-cache:
-  directories:
-    - $HOME/.gradle/caches/
-    - $HOME/.gradle/wrapper/
-    
-    script:
+  - export ANDROID_HOME=$PWD/android-sdk-linux
+  - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
+
+  - chmod +x $PWD/.travis_install_android_dependencies.sh
+  - $PWD/.travis_install_android_dependencies.sh
+
+  - chmod +x $PWD/.travis_start_emulator.sh
+  - $PWD/.travis_start_emulator.sh
+
+before_script:
+  - chmod +x $PWD/.travis_wait_for_emulator.sh
+  - $PWD/.travis_wait_for_emulator.sh
+
+script:
     ./gradlew build connectedCheck
