--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,11 @@
-language: java
+language: android
 jdk: oraclejdk7
+env:
+  matrix:
+    - ANDROID_TARGET=android-19  ANDROID_ABI=armeabi-v7a
 
-before_install:
-  - chmod +x $PWD/.travis_install_android.sh
-  - $PWD/.travis_install_android.sh
+android:
+  components:
+    - build-tools-19.0.0
 
-  - export ANDROID_HOME=$PWD/android-sdk-linux
-  - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
-
-  - chmod +x $PWD/.travis_install_android_dependencies.sh
-  - $PWD/.travis_install_android_dependencies.sh
-
-  - chmod +x $PWD/.travis_start_emulator.sh
-  - $PWD/.travis_start_emulator.sh
-
-before_script:
-  - chmod +x $PWD/.travis_wait_for_emulator.sh
-  - $PWD/.travis_wait_for_emulator.sh
-
-script:
-    ./gradlew build connectedCheck
+script: ./gradlew connectedAndroidTest
