--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,16 @@
 language: android
 jdk: oraclejdk7
+
+before_install:
+ - chmod +x gradlew
+ 
+before_cache:
+  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+ 
 env:
   matrix:
     - ANDROID_TARGET=android-24  ANDROID_ABI=armeabi-v7a
