--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
 language: android
 jdk: oraclejdk7
 
+components:
+        - build-tools-24.0.1
+        - android-24
+        - platform-tools
+        - extra-android-support
+        - extra-android-m2repository
+        - extra-google-m2repository
+        - extra-google-google_play_services
+
 before_install:
  - chmod +x gradlew
  
