--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,6 @@
 language: android
 jdk: oraclejdk7
 
-components:
-        - build-tools-24.0.1
-        - android-24
-        - platform-tools
-        - extra-android-support
-        - extra-android-m2repository
-        - extra-google-m2repository
-        - extra-google-google_play_services
-
 before_install:
  - chmod +x gradlew
  
@@ -19,13 +10,17 @@ cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
- 
-env:
-  matrix:
-    - ANDROID_TARGET=android-24  ANDROID_ABI=armeabi-v7a
 
 android:
   components:
-    - build-tools-24.0.1
+        - tools # to get the new `repository-11.xml`
+        - tools # to install Android SDK tools 25.1.x (x = 6 right now)
+        - build-tools-25.1.6
+        - android-24
+        - platform-tools
+        - extra-android-support
+        - extra-android-m2repository
+        - extra-google-m2repository
+        - extra-google-google_play_services
 
 script: ./gradlew build connectedCheck
