--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,12 @@ android:
   components:
         - tools # to get the new `repository-11.xml`
         - tools # to install Android SDK tools 25.1.x (x = 6 right now)
-        - build-tools-25.1.6
-        - android-24
         - platform-tools
         - extra-android-support
         - extra-android-m2repository
         - extra-google-m2repository
         - extra-google-google_play_services
 
-script: ./gradlew build connectedCheck
+script: 
+./gradlew build connectedCheck
+./gradlew connectedAndroidTest
