--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,5 @@ android:
         - extra-google-m2repository
         - extra-google-google_play_services
 
-script: 
-./gradlew build connectedCheck
+script: ./gradlew build connectedCheck
 ./gradlew connectedAndroidTest
