--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ android:
   components:
         - tools # to get the new `repository-11.xml`
         - tools # to install Android SDK tools 25.1.x (x = 6 right now)
+        - build-tools-25.1.6
         - platform-tools
         - extra-android-support
         - extra-android-m2repository
@@ -22,4 +23,3 @@ android:
         - extra-google-google_play_services
 
 script: ./gradlew build connectedCheck
-script: ./gradlew connectedAndroidTest
