--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: android
-jdk: oraclejdk7
+
+sudo: false
+
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
 
 before_install:
  - chmod +x gradlew
