--- a/.travis.yml
+++ b/.travis.yml
@@ -30,5 +30,23 @@ android:
         - extra-android-m2repository
         - extra-google-m2repository
         - extra-google-google_play_services
+        # Specify at least one system image,
+        # if you need to run emulator(s) during your tests
+        # - sys-img-armeabi-v7a-android-21
+        - sys-img-x86-android-24
+        
+env:
+  global:
+   # install timeout in minutes (2 minutes by default)
+    - ADB_INSTALL_TIMEOUT=8
+        
+# Emulator Management: Create, Start and Wait
+before_script:
+  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 
-script: ./gradlew build connectedCheck
+script: 
+  - android list target
+  - ./gradlew build connectedCheck
