--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,8 @@ android:
         - extra-google-google_play_services
         # Specify at least one system image,
         # if you need to run emulator(s) during your tests
-        # - sys-img-armeabi-v7a-android-21
-        - sys-img-x86-android-24
+        - sys-img-armeabi-v7a-android-24
+        # - sys-img-x86-android-24
         
 env:
   global:
@@ -42,7 +42,7 @@ env:
         
 # Emulator Management: Create, Start and Wait
 before_script:
-  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
