--- a/.travis.yml
+++ b/.travis.yml
@@ -50,3 +50,11 @@ before_script:
 script: 
   - android list target
   - ./gradlew build connectedCheck
+
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/7346b57d8c284592f2bb
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
