--- a/sampleapp/build.gradle
+++ b/sampleapp/build.gradle
@@ -40,5 +40,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support:cardview-v7:25.0.0'
     compile project(':admobadapter')
 }
