--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ android:
         - tools # to get the new `repository-11.xml`
         - tools # to install Android SDK tools 25.1.x (x = 6 right now)
         - build-tools-24.0.3
+        - android-24
         - android-25
         - platform-tools
         - extra-android-support
