migrate to gradle 2.3.1 bump all dependencies NOW REQUIRE MIN SDK 14!!! due to migration to the 10.2.x google services comment uot google-play ads dependency as unused

--- a/admobadapter/src/main/AndroidManifest.xml
+++ b/admobadapter/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.clockbyte.admobadapter">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.clockbyte.admobadapter">
 
     <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
