--- a/admobadapter/build.gradle
+++ b/admobadapter/build.gradle
@@ -39,9 +39,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.3.1'
-    //compile 'com.google.android.gms:play-services-ads:10.2.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.google.firebase:firebase-core:10.2.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.google.firebase:firebase-ads:10.2.1'
 
     testCompile 'junit:junit:4.12'
@@ -50,4 +49,5 @@ dependencies {
     testCompile "org.powermock:powermock-module-junit4-rule:1.6.5"
     testCompile "org.powermock:powermock-api-mockito:1.6.5"
     testCompile "org.powermock:powermock-classloading-xstream:1.6.5"
+    compile 'org.jetbrains:annotations-java5:15.0'
 }
