--- a/sampleapp/build.gradle
+++ b/sampleapp/build.gradle
@@ -45,4 +45,6 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+
+    implementation 'com.google.android.gms:play-services-ads:20.2.0'
 }
