--- a/sampleapp/src/main/AndroidManifest.xml
+++ b/sampleapp/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
             (native / banner) which you want to test -->
         <activity
             android:name=".banner.MainActivity_RecyclerView_Banner"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
