--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,25 @@
 language: android
 dist: trusty
-jdk: 
-  - oraclejdk8
+# jdk: 
+#   - oraclejdk8
 
-addons:
-  apt:
-    packages:
-      - oracle-java8-installer
+# addons:
+#   apt:
+#     packages:
+#       - oracle-java8-installer
 
-before_install:
- - chmod +x gradlew
- - yes | sdkmanager "platforms;android-27"
+# before_install:
+#  - chmod +x gradlew
+#  - yes | sdkmanager "platforms;android-27"
  
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
+    - $HOME/.android/build-cache
 
 android:
   components:
@@ -45,7 +47,7 @@ env:
 before_script:
   - android list target
   - echo no | android create avd --force -n test -t android-30 --abi armeabi-v7a
-  - emulator -avd test -no-window &
+  - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
