--- a/.travis.yml
+++ b/.travis.yml
@@ -23,10 +23,9 @@ cache:
 
 android:
   components:
-        # - tools # to get the new `repository-11.xml`
-        # - tools # to install Android SDK tools 25.1.x (x = 6 right now)
+        - tools # to get the new `repository-11.xml`
+        - tools # to install Android SDK tools 25.1.x
         - build-tools-30.0.2
-        # - android-24
         - android-31
         - platform-tools
         - extra-android-support
@@ -46,7 +45,7 @@ env:
 # Emulator Management: Create, Start and Wait
 before_script:
   - android list target
-  - echo no | android create avd --force -n test -t android-30 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-30 --abi armeabi-v7a -c 100M
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
