--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: android
 dist: trusty
-# jdk: 
-#   - oraclejdk8
+jdk: 
+  - oraclejdk8
 
-# addons:
-#   apt:
-#     packages:
-#       - oracle-java8-installer
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
 
 before_install:
  - chmod +x gradlew
@@ -24,9 +24,10 @@ cache:
 android:
   components:
         - tools # to get the new `repository-11.xml`
-        - tools # to install Android SDK tools 25.1.x
+        #- tools # to install Android SDK tools 25.1.x
         - build-tools-30.0.2
-        - android-31
+        - android-30
+        - android-22
         - platform-tools
         - extra-android-support
         - extra-android-m2repository
@@ -34,7 +35,7 @@ android:
         - extra-google-google_play_services
         # Specify at least one system image,
         # if you need to run emulator(s) during your tests
-        - sys-img-armeabi-v7a-android-24
+        - sys-img-armeabi-v7a-android-22
         # - sys-img-x86-android-24
         
 env:
@@ -45,13 +46,16 @@ env:
 # Emulator Management: Create, Start and Wait
 before_script:
   - android list target
-  - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a -c 100M
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
-script: 
-  - ./gradlew build connectedCheck
+script:
+  - ./gradlew clean build
+  - ./gradlew test
+  - ./gradlew build check
+  # - ./gradlew build connectedCheck
 
 notifications:
   webhooks:
