--- a/admobadapter/build.gradle
+++ b/admobadapter/build.gradle
@@ -54,6 +54,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation "androidx.cardview:cardview:1.0.0"
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     implementation 'com.google.android.gms:play-services-ads:20.4.0'
