--- a/admobadapter/build.gradle
+++ b/admobadapter/build.gradle
@@ -59,10 +59,10 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-ads:20.4.0'
 
-    testImplementation 'junit:junit:4.13.1'
-    testImplementation 'org.mockito:mockito-core:3.3.3'
-    testImplementation "org.powermock:powermock-module-junit4:1.6.5"
-    testImplementation "org.powermock:powermock-module-junit4-rule:1.6.5"
-    testImplementation "org.powermock:powermock-api-mockito:1.6.5"
-    testImplementation "org.powermock:powermock-classloading-xstream:1.6.5"
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+    testImplementation "org.powermock:powermock-module-junit4:2.0.9"
+    testImplementation "org.powermock:powermock-module-junit4-rule:2.0.9"
+    testImplementation "org.powermock:powermock-api-mockito2:2.0.9"
+    testImplementation "org.powermock:powermock-classloading-xstream:2.0.9"
 }
